index page design update and fixes to social-media-list being uneven

--- a/_sass/main/_index.scss
+++ b/_sass/main/_index.scss
@@ -1,27 +1,52 @@
-.hero-image {
-  @include bg-image('images/home-hero.jpg', 49.72%);
-
-  @include media-query($on-tablet) {
-    @include bg-image('images/home-hero-tablet.jpg', 93.23%);
+.hero-container {
+  .top-bg {
+    width: 100%;
+    height: 202px;
+    background-color: #fff;
+  }
+  .bottom-bg {
+    width: 100%;
+    height: 516px;
+    background-color: #57b6c3;
   }
 
   @include media-query($on-mobile) {
-    @include bg-image('images/home-hero-mobile.jpg', 160%);
+    .top-bg {
+      height: 183px;
+    }
+    .bottom-bg {
+      height: 416px;
+    }
   }
 
-  // center inner text
+  // center inner container
   display: flex;
-  justify-content: center;
+  flex-direction: column;
+  align-items: center;
+  position: relative;
 }
+
+
 
 .hero-text-container {
   position: absolute;
-  top: 28%;
+  top: 80px;
   width: 100%;
+  max-width: 868px;
+  height: 382px;
+  box-sizing: border-box;
+  border: 4px solid overlay-value(0.75);
+  background-color: #fff;
+  overflow-x: hidden;
 
-  // same position for mobile
   @include media-query($on-tablet) {
-    top: 30%;
+    max-width: 718px;
+  }
+
+  @include media-query($on-mobile) {
+    max-width: 345px;
+    height: 326px;
+    top: 70px;
   }
 
   display: flex;
@@ -32,104 +57,68 @@
 }
 
 .scroll-down {
-  @include bg-image-fixed('images/scroll-icon.svg', 20px, 11px);
-  position: absolute;
-  bottom: 10%;
+  $padding: 8px;
 
-  @include media-query($on-tablet) {
-    bottom: 7%;
+  width: 20px;
+  height: 11px;
+  padding: $padding;
+  position: absolute;
+  bottom: 40px - $padding;
+
+  svg > path {
+    fill: none;
   }
 
   @include media-query($on-mobile) {
-    bottom: 10%;
+    bottom: 31px - $padding;
   }
 }
 
 .home-hello {
   @include mont-font(700);
-  font-size: 64px;
+  font-size: 72px;
   letter-spacing: -0.2px;
-  margin-bottom: 45px;
-  line-height: 78px;
+  margin-bottom: 25px;
+  line-height: 88px;
 
-  @include media-query(1100px) {
-    font-size: 62px;
-    margin-bottom: 40px;
-    line-height: 76px;
-  }
-
-  // also tablet size
-  @include media-query(1000px) {
-    font-size: 60px;
-    margin-bottom: 31px;
-    line-height: 73px;
-  }
-
-  @include media-query(600px) {
-    font-size: 54px;
-    margin-bottom: 31px;
-    line-height: 65px;
+  @include media-query($on-tablet) {
+    letter-spacing: -0.1px;
+    font-size: 64px;
+    line-height: 78px;
   }
 
   @include media-query($on-mobile) {
     font-size: 48px;
-    margin-bottom: 31px;
     line-height: 58px;
   }
 }
 
 .home-desc {
-  @include mont-font(400);
-  font-size: 48px;
+  @include mont-font();
+  font-size: 46px;
   letter-spacing: -0.1px;
-  line-height: 58px;
-  max-width: 696px;
+  line-height: 57px;
+  max-width: 626px;
   text-align: center;
 
-  @include media-query(1100px) {
-    font-size: 42px;
-    max-width: 600px;
-    line-height: 51px;
-  }
-
-  @include media-query(1000px) {
-    font-size: 36px;
-    max-width: 500px;
-    line-height: 44px;
-  }
-
-  @include media-query(850px) {
-    font-size: 30px;
-    max-width: 450px;
-    margin-top: -10px;
-    line-height: 38px;
-  }
-
   @include media-query($on-tablet) {
-    font-size: 36px;
-    max-width: 416px;
-    line-height: 44px;
-  }
-
-  @include media-query(600px) {
-    font-size: 30px;
-    max-width: 350px;
-    margin-top: -10px;
-    line-height: 38px;
+    font-size: 40px;
+    max-width: 556px;
+    line-height: 49px;
   }
 
   @include media-query($on-mobile) {
     font-size: 24px;
-    max-width: 280px;
+    max-width: 295px;
     line-height: 29px;
   }
 }
 
 .section-header {
-  @include mont-font(400);
+  @include lato-font(400);
   text-transform: uppercase;
-  font-size: 24px;
-  line-height: 29px;
+  font-size: 22px;
+  line-height: 27px;
   letter-spacing: -0.1px;
   padding: 90px 0px;
   display: block;
